--- a/women.html
+++ b/women.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men Page</title>
+    <title>Women Page</title>
     <link rel="stylesheet" href="men.css">
 </head>
 <body>
     <div class="wrapper">
         <nav>
             <div class='nav-link-1'>
-               <img src="../images/icon-menu.svg" alt="img">
+               <img src="./images/icon-menu.svg" alt="img">
                 <p>Sneakers</p>
                 <ul class='menu-link'>
                     <li><a href="collection.html">Collections</a></li>
@@ -23,9 +23,9 @@
     
             </div>
             <div class="nav-link-2">
-               <img src="../images/icon-cart.svg" alt="img" class='img1'/>
+               <img src="./images/icon-cart.svg" alt="img" class='img1'/>
                <span>0</span>
-                <img src="../images/image-avatar.png" alt="img" class='img2'>
+                <img src="./images/image-avatar.png" alt="img" class='img2'>
             </div>
         </nav>
         <span><hr></span>
